change: Result schema in api.yml
